# PitchQuest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
docs/: protocol.md
include/pitchquest/: alsaaudioplayer.hpp  audioplayer.hpp  cli.hpp  client.hpp  clientpackethandler.hpp  cliloop.hpp  intervalchallengepacket.hpp  intervalchallengeresponsepacket.hpp  logger.hpp  note.hpp  packethandler.hpp  ringbuffer.hpp  scale.hpp  server.hpp
src/client/: alsaaudioplayer.cpp  client.cpp  clientpackethandler.cpp  main.cpp
src/common/: cliloop.cpp  intervalchallengepacket.cpp  logger.cpp
src/server/: main.cpp  server.cpp
test/: alsaaudioplayer_testfriend.hpp  ringbuffer_testfriend.hpp  test_alsaaudioplayer.cpp  test_cliloop.cpp  test_intervalchallengepacket.cpp  test_intervalchallengeresponsepacket.cpp  test_ringbuffer.cpp  test_sanitize.cpp  test_scale.cpp  test_tokenize.cpp
